1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-keycloak
  namespace: keycloak-ns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx-keycloak-ns
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: keycloak
            port:
              number: 80
